<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_button_descr">settings_button</string>
    <string name="fab_content_desc">floating_button</string>
    <string name="mode_tittle">Mode:</string>
    <string name="back_button">back button</string>
    <string name="settings">Settings</string>
    <string name="wall_width">Ширина стен</string>
    <string name="choose_mod_text">Выберите режим</string>
    <string name="erase_width_text">Ширина ластика</string>
    <string name="choose_alg_text">Выберите алгоритм</string>
    <string-array name="mode_names">
        <item>Drawing</item>
        <item>Erase</item>
        <item>Start</item>
        <item>Finish</item>
    </string-array>
    <string-array name="alg_names">
        <item>A-star</item>
        <item>Bfs</item>
    </string-array>
</resources>